--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -1,15 +1,16 @@
 % This is a configuration file of rebar3, so that Ceylan-Traces can better
 % integrate in the current OTP ecosystem, despite its (more complex, probably
 % more flexible) native build based on GNU make.
-
+%
 % If the name of this file is 'rebar.config', then it is a generated file,
-% otherwise it is a template (in conf/rebar.config.template), meant to be filled
-% by information coming from GNUmakevars.inc.
+% otherwise it is a template (located in conf/rebar.config.template), meant to
+% be filled by information determined at build time or coming from
+% GNUmakevars.inc.
 %
 % See the Myriad counterpart file (same name) for more explanations.
 
 
-% Base layout was obtained thanks to: 'rebar3 new app traces', as WOOPER is an
+% Base layout was obtained thanks to: 'rebar3 new app traces', as Traces is an
 % active OTP application (not a mere library).
 
 % To be taken into account, from the library root, through 'make
@@ -19,12 +20,14 @@
 % Settings for the 'default' profile follow.
 
 
+% Depends on the Ceylan-Myriad and Ceylan-WOOPER OTP library applications
+% (Erlang implied):
+
 % As a GIT-based dependency:
-%
 {deps, [ {myriad, {git, "git://github.com/Olivier-Boudeville/Ceylan-Myriad",
 					{branch, "master"}}},
 		 {wooper, {git, "git://github.com/Olivier-Boudeville/Ceylan-WOOPER",
-					{branch, "master"} } } ] }.
+					{branch, "master"}}} ] }.
 
 
 % As an hex-package dependency:
@@ -72,38 +75,37 @@
 
 {profiles, [
 
-  % Production mode:
-  {prod, [ {relx, [
-
-	% Same as default profile:
-	{release, {traces_release, "VERSION_FOR_REBAR3",
-			  % myriad and wooper thus implied:
-			  [sasl, traces]},
+  % Production mode (the default one when used as a dependency):
+  {prod, [
 
 	% Like for the default profile, except for removed {d,myriad_debug_mode},
 	% {d,wooper_debug_mode} and {d,traces_debug_mode}, and added
 	% {d,exec_target_is_production}:
 	%
-	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"DEBUG_KEY_FOR_REBAR"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, INCS_FOR_REBAR ]}.
+	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"DEBUG_KEY_FOR_REBAR"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, INCS_FOR_REBAR ]},
 
 	% For the build makefiles:
 	{env, [ { 'REBAR_PROFILE', "prod" } ] },
 
-	% Not wanting the release to contain symlinks to applications:
-	{dev_mode, false},
+	{relx, [
 
-	% Creating a full target system:
-	{include_erts, true},
+	  % Not wanting the release to contain symlinks to applications:
+	  {dev_mode, false},
 
-	{extended_start_script, true},
-	{include_src, false}
+	  % Creating a full target system:
+	  {include_erts, true},
 
-  ]}]
+	  {extended_start_script, true},
+	  {include_src, false}
 
-}] }.
+  ]} ] }
+
+  % No test profile currently needed.
+
+]}.
 
 
-% For packages:
+% For Hex packages (see https://hex.pm/):
 %
 % (use 'rebar3 update' to enable the hex plugin)
 %
