--- a/rebar.config
+++ b/rebar.config
@@ -35,7 +35,7 @@
 
 
 % Include directories found in INC:
-{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"src"}, {i,"../wooper/include/"}, {i,"../wooper/src"}, {i,"../wooper/../myriad/include/"}, {i,"include"}, {i,"../wooper/include"}, {i,"../wooper/examples"}, {i,"../wooper/../myriad/include/data-management"}, {i,"../wooper/../myriad/include/maths"}, {i,"../wooper/../myriad/include/meta"}, {i,"../wooper/../myriad/include/user-interface/src"}, {i,"../wooper/../myriad/include/user-interface/src/textual"}, {i,"../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../wooper/../myriad/include/utils"}, {i,"../wooper/../myriad/include/scripts"}, {i,"../wooper/../myriad/include/apps/merge-tool"}, {i,"../wooper/../myriad/.."} ]}.
+{erl_opts, [ {d,myriad_debug_mode}, {d,wooper_debug_mode}, {d,traces_debug_mode}, {d,tracing_activated}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"src"}, {i,"../wooper/include/"}, {i,"../wooper/src"}, {i,"../wooper/../myriad/include/"}, {i,"include"}, {i,"../wooper/include"}, {i,"../wooper/examples"}, {i,"../wooper/../myriad/include/data-management"}, {i,"../wooper/../myriad/include/maths"}, {i,"../wooper/../myriad/include/meta"}, {i,"../wooper/../myriad/include/user-interface/src"}, {i,"../wooper/../myriad/include/user-interface/src/textual"}, {i,"../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../wooper/../myriad/include/utils"}, {i,"../wooper/../myriad/include/scripts"}, {i,"../wooper/../myriad/include/apps/merge-tool"}, {i,"../wooper/../myriad/.."} ]}.
 
 
 % Bootstrapped modules (from BOOTSTRAP_MODULES):
@@ -79,8 +79,8 @@
   {prod, [
 
 	% Like for the default profile, except for removed {d,myriad_debug_mode},
-	% {d,wooper_debug_mode} and {d,traces_debug_mode}, and added
-	% {d,exec_target_is_production}:
+	% {d,wooper_debug_mode}, {d,traces_debug_mode} and {d,tracing_activated},
+	% and added {d,exec_target_is_production}:
 	%
 	{erl_opts, [ {d,exec_target_is_production}, debug_info, {debug_info_key,"Ceylan-Myriad"}, report_warnings, warn_export_all, warn_export_vars, warn_shadow_vars, warn_obsolete_guards, warn_unused_import, warnings_as_errors, {parse_transform,wooper_parse_transform}, {i,"src"}, {i,"../wooper/include/"}, {i,"../wooper/src"}, {i,"../wooper/../myriad/include/"}, {i,"include"}, {i,"../wooper/include"}, {i,"../wooper/examples"}, {i,"../wooper/../myriad/include/data-management"}, {i,"../wooper/../myriad/include/maths"}, {i,"../wooper/../myriad/include/meta"}, {i,"../wooper/../myriad/include/user-interface/src"}, {i,"../wooper/../myriad/include/user-interface/src/textual"}, {i,"../wooper/../myriad/include/user-interface/src/graphical"}, {i,"../wooper/../myriad/include/utils"}, {i,"../wooper/../myriad/include/scripts"}, {i,"../wooper/../myriad/include/apps/merge-tool"}, {i,"../wooper/../myriad/.."} ]},
 
