--- a/conf/logmx/logmx.properties
+++ b/conf/logmx/logmx.properties
@@ -1,28 +1,29 @@
-#LogMX Properties (generated preferences file)  [LogMX v5.3.1]
-#Tue Oct 24 13:06:15 CEST 2017
+#LogMX Properties (generated preferences file)  [LogMX v5.1.2]
+#Fri Dec 04 21:43:24 CET 2020
 saveOptionsAtShutdown=false
-rightSplitPos=503
+rightSplitPos=355
 findOptionCaseSensitive=false
 alertsPeriodLength=1000
 autoRefreshLimit=true
 currLevel=1
-findFieldThread=true
+findFieldThread=false
 confirmExitIfSeveralFiles=true
 reloadJavaParsers=true
 entriesTableColumns=0/@/@/ID/@/@/true/@/@/3.0;1/@/@/Timestamp/@/@/true/@/@/8.0;2/@/@/Thread/@/@/true/@/@/8.0;3/@/@/Emitter/@/@/true/@/@/8.0;4/@/@/Level/@/@/true/@/@/8.0;5/@/@/Message/@/@/true/@/@/65.0
 bookmarks=
-uncompressFiles=true
+level.color.NOTICE=[30,244,43]
 fileInfosSettings=0,0
-level.color.DEBUG=[218,230,218]
+level.color.DEBUG=[215,255,220]
 showAccelerators=true
 useCustomDateFormat=false
 alwaysAutoRefresh=true
 treeFontSize=11
 extApps=
 customDateFormat=d MMM yy HH\:mm\:ss.SSS
+level.color.ALERT=[180,15,16]
 autoExpandPacks=true
 mergedFilesFullPath=true
-level.color.INFO=[129,201,165]
+level.color.INFO=[156,235,166]
 workspaces=
 reloadManagers=false
 checkFontOKForLocale=true
@@ -30,20 +31,18 @@ filteringStates=
 entriesGradient=true
 bookmarksWinBounds=[0,0,600,443]
 smtpSettings=/\://\:/25/\:/false/\:/false/\://\://\:/<END>
-lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager;foo
+lastManagersURL=com.lightysoft.logmx.mgr.managers.LocalFileManager;SOME_DIR/ceylan/traces/conf/logmx/TraceSample.txt
 displayBookmarkNameOnTab=false
-level.color.FATAL=[255,0,0]
-uiFont=Dialog.plain-11
+uiFont=SansSerif.plain-11
 nbMaxAlertsInPeriod=1
 entriesOutline=true
 tableRowHeight=2
 findFieldText=true
 attachMemStatusPanel=true
-findOptionUseSelection=false
+findOptionUseSelection=true
 alerts=
 tailSize=SMALL
-findFieldID=true
-level.color.TRACE=[178,243,190]
+findFieldID=false
 checkForNewVersion=false
 openFileAction=ASK
 firstFileLoad=false
@@ -53,54 +52,55 @@ alwaysOnTop=false
 proxySettings=false-false,\:0/false,[],true,127.0.0.1;localhost
 foldEmptyPacks=true
 windowState=0
-encodingSettings=DEFAULT_ENCODING//null//null
-recentFiles=none;none;none;none;none
-findFieldLevel=true
+encodingSettings=SPECIFIC_ENCODING//UTF-8//null
+recentFiles=
+findFieldLevel=false
 autoRefreshEntriesLimit=100000
 remoteFileChangeDetectionDelay=2000
 correlationSettings=500,0
 recentSearchs=
 findOptionResultDisplayMode=2
+level.color.CRITICAL=[255,0,0]
 userAccounts=
+level.color.EMERGENCY=[100,0,0]
 findOptionRegexp=false
 showMemStatusPanel=true
-windowBounds=[172,49,1627,1005]
-first=573486035265
-leftSplitPos=397
-level.5=ERROR;FATAL;<NO_LEVEL>
-optionsWinBounds=[699,258,400,500]
+windowBounds=[218,71,1689,878]
+first=551340717238
+leftSplitPos=416
+level.5=EMERGENCY;ERROR;ALERT;<NO_LEVEL>;CRITICAL
+optionsWinBounds=[334,255,1278,735]
 level.4=WARNING
-level.3=INFO
-level.2=TRACE
-level.color.ERROR=[255,0,0]
+level.3=NOTICE
+level.2=INFO
+level.color.ERROR=[248,63,30]
 level.1=DEBUG
 mailDebug=false
 entryDetailsFields=5;3
 nbMaxLevelsPerGroupInSlider=2
 findOptionWrap=false
-lastSearchInEntryMsg=
-statsSettings=DISTRIBUTION;ALL_ENTRIES;[605,222,800,600];true;true;true;false;false;EMITTER;true;true;false;EMITTER
+lastSearchInEntryMsg=meta
+statsSettings=DISTRIBUTION;ALL_ENTRIES;no_rect;true;true;true;false;false;EMITTER;true;true;false;EMITTER
 useNativeKeyboardShortcutKey=true
 toolbarButtons=file.Open;file.Reload;;edit.Copy;edit.Find;;filter.Filter;filter.Calendar;filter.FilteringStates;;tools.AutoRefresh;tools.DeltaT;tools.Export;;tools.Options
-findFieldClass=true
-recentFilters=
+findFieldClass=false
+recentFilters=5,5,tion \#,false,true,,false;5,5,Deadline,false,true,,false
 cxTimeout=5
 confirmExit=false
-redirections=1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/1/\:/FATAL;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/2/\:/ERROR;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/3/\:/WARNING;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/4/\:/INFO;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/5/\:/TRACE;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/6/\:/DEBUG
+redirections=1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/0/\:/EMERGENCY;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/1/\:/ALERT;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/2/\:/CRITICAL;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/3/\:/ERROR;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/4/\:/WARNING;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/5/\:/NOTICE;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/6/\:/INFO;1/\:/Ceylan Trace Parser (using Java class "ceylan.parser.CeylanTraceParser")/\:/7/\:/DEBUG
 closeFilesAtWorkspaceOpening=true
-managers=com.lightysoft.logmx.mgr.managers.LocalFileManager;com.lightysoft.logmx.mgr.managers.SCPFileManager;com.lightysoft.logmx.mgr.managers.SFTPFileManager;sample.manager.SampleHTTPManager;com.lightysoft.logmx.mgr.managers.LocalDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPFileManager;com.lightysoft.logmx.mgr.managers.FTPSFileManager;com.lightysoft.logmx.mgr.managers.SocketManager;com.lightysoft.logmx.mgr.managers.SFTPDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPSDirectoryManager
-findFieldDate=true
+managers=com.lightysoft.logmx.mgr.managers.LocalFileManager;com.lightysoft.logmx.mgr.managers.SCPFileManager;com.lightysoft.logmx.mgr.managers.SFTPFileManager;sample.manager.SampleHTTPManager;com.lightysoft.logmx.mgr.managers.LocalDirectoryManager;com.lightysoft.logmx.mgr.managers.FTPFileManager;com.lightysoft.logmx.mgr.managers.FTPSFileManager
+findFieldDate=false
 defaultOpenDir=
 level.color.<NO_LEVEL>=[255,0,0]
 ignoreEmitters=false
-lastLogMXVersion=5003001
+lastLogMXVersion=5001002
 fileMonitoring=true
 sortPacks=true
-exportSettings=/@/@/;dd MMM yyyy HH\:mm\:ss.SSS;ALL_ENTRIES;5/@/@/3/@/@/4/@/@/1/@/@/2;true;false;true;true;CSV;dd MMM yyyy HH\:mm\:ss.SSS;dd MMM yyyy HH\:mm\:ss.SSS;true;true;false;dd MMM yyyy HH\:mm\:ss.SSS
+exportSettings=,;dd MMM yyyy HH\:mm\:ss.SSS;ALL_ENTRIES;5/@/@/3/@/@/4/@/@/1/@/@/2;true;false;true;true;CSV;dd MMM yyyy HH\:mm\:ss.SSS;dd MMM yyyy HH\:mm\:ss.SSS;true;true;false;dd MMM yyyy HH\:mm\:ss.SSS
 syslogParserHandlePIDAsEmitter=false
-autoRefreshFocusOnBottom=true
-registeredParsers=1//0-Ceylan Trace Parser//ceylan.parser.CeylanTraceParser---en_US;0//0-Log Factor 5 format parser//com.lightysoft.logmx.mgr.parsers.LF5LogFileParser---en_US;0//0-Log4j HTML format parser//com.lightysoft.logmx.mgr.parsers.Log4jHTMLLogFileParser---en_US;0//0-Log4j XML format parser//com.lightysoft.logmx.mgr.parsers.Log4jXMLLogFileParser---en_US;1//0-UNIX/Linux system logs (syslog) format parser//com.lightysoft.logmx.mgr.parsers.SyslogLogFileParser---en_US;1//0-Eclipse RCP logs parser//com.lightysoft.logmx.mgr.parsers.EclipseLogsParser---en_US;1//0-Log4j JSON parser//com.lightysoft.logmx.mgr.parsers.Log4j2JSONLogFileParser---en_US;1//0-LogMX exported files parser//com.lightysoft.logmx.mgr.parsers.LogMXExportLogFileParser---en_US
+autoRefreshFocusOnBottom=false
+registeredParsers=1//0-Ceylan Trace Parser//ceylan.parser.CeylanTraceParser---en_US;0//0-Log Factor 5 format parser//com.lightysoft.logmx.mgr.parsers.LF5LogFileParser---en_US;0//0-Log4j HTML format parser//com.lightysoft.logmx.mgr.parsers.Log4jHTMLLogFileParser---en_US;0//0-Log4j XML format parser//com.lightysoft.logmx.mgr.parsers.Log4jXMLLogFileParser---en_US;1//0-UNIX/Linux system logs (syslog) format parser//com.lightysoft.logmx.mgr.parsers.SyslogLogFileParser---en_US;1//0-Eclipse RCP logs parser//com.lightysoft.logmx.mgr.parsers.EclipseLogsParser---en_US;1//0-Log4j JSON parser//com.lightysoft.logmx.mgr.parsers.Log4j2JSONLogFileParser---en_US
 interlacedMerge=true
-socketManagerBufSize=131072
-level.color.WARNING=[244,184,0]
+level.color.WARNING=[255,152,0]
 tableFontSize=10
