--- a/conf/rebar.config.template
+++ b/conf/rebar.config.template
@@ -54,8 +54,8 @@
 %{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
 %{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
-{pre_hooks,  [ {compile, "make rebar3-bulletproof-compile-pre-hook"} ]}.
-{post_hooks, [ {compile, "make rebar3-bulletproof-compile-post-hook"} ]}.
+{pre_hooks,  [ {compile, "make -s rebar3-bulletproof-compile-pre-hook"} ]}.
+{post_hooks, [ {compile, "make -s rebar3-bulletproof-compile-post-hook"} ]}.
 
 
 % For release generation:
