--- a/doc/overview.edoc.template
+++ b/doc/overview.edoc.template
@@ -19,14 +19,14 @@
 </p>
 
 <p>
-<b>Note that, currently, code based on WOOPER is not correctly taken into account by edoc</b>: due to limitations, most of the listed functions lack their documentation, and all methods and also generated code such as constructors are invisible to edoc, respectively as it is not aware that they are actually exported in, or added to, the AST.
+<b>Note that, currently, code based on WOOPER is not correctly taken into account by edoc</b>: due to limitations, most of the listed functions lack their documentation, and all methods and also generated code, such as constructors are invisible to edoc, respectively as it is not aware that they are actually exported in, or added to, the AST.
 </p>
 
-@reference See the <a href="http://traces.esperide.org" target="_blank">Traces</a> official website or <a href="https://olivier-boudeville.github.io/Ceylan-Traces/index.html" target="_blank">its mirror</a>
+@reference See the <a href="http://traces.esperide.org" target="_blank">Traces official website</a> or <a href="https://olivier-boudeville.github.io/Ceylan-Traces/index.html" target="_blank">its mirror</a>
 
 @reference In terms of dependency, for additional information one may refer to:
 <ul>
-  <li>the <a href="http://wooper.esperide.org" target="_blank">WOOPER</a> official website or <a href="https://olivier-boudeville.github.io/Ceylan-WOOPER/index.html" target="_blank">its mirror</a>, notably its <a href="https://myriad.esperide.org/api-doc/index.html" target="_blank">API documentation</a></li>
-  <li>the <a href="http://myriad.esperide.org" target="_blank">Myriad</a> official website or <a href="https://olivier-boudeville.github.io/Ceylan-Myriad/index.html" target="_blank">its mirror</a>, notably its <a href="https://myriad.esperide.org/api-doc/index.html" target="_blank">API documentation</a></li>
-  <li>to the <a href="http://erlang.org" target="_blank">Erlang</a> official website, notably its <a href="https://erlang.org/doc/man_index.html">API documentation</a></li>
+  <li>the <a href="http://wooper.esperide.org" target="_blank">WOOPER official website</a> or <a href="https://olivier-boudeville.github.io/Ceylan-WOOPER/index.html" target="_blank">its mirror</a>, notably its <a href="https://myriad.esperide.org/api-doc/index.html" target="_blank">API documentation</a></li>
+  <li>the <a href="http://myriad.esperide.org" target="_blank">Myriad official website</a> or <a href="https://olivier-boudeville.github.io/Ceylan-Myriad/index.html" target="_blank">its mirror</a>, notably its <a href="https://myriad.esperide.org/api-doc/index.html" target="_blank">API documentation</a></li>
+  <li>to the <a href="http://erlang.org" target="_blank">Erlang official website</a>, notably its <a href="https://erlang.org/doc/man_index.html">API documentation</a></li>
 </ul>
