--- a/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
+++ b/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
@@ -29,11 +29,11 @@ Technical Manual of the ``Ceylan-Traces`` Layer
 ===============================================
 
 
-:Organisation: Copyright (C) 2010-2021 Olivier Boudeville
+:Organisation: Copyright (C) 2010-GENERATION_YEAR_TAG Olivier Boudeville
 :Contact: about (dash) traces (at) esperide (dot) com
 :Creation date: Sunday, August 15, 2010
-:Lastly updated: GENERATION_DATE
-:Version: PROJECT_VERSION
+:Lastly updated: GENERATION_DATE_TAG
+:Version: PROJECT_VERSION_TAG
 :Status: Stable
 :Dedication: Users and maintainers of the ``Traces`` layer.
 :Abstract:
