--- a/rebar.config
+++ b/rebar.config
@@ -31,7 +31,7 @@
 
 
 % As an hex-package dependency:
-%{deps, [ {wooper, "2.0.12"} ] }.
+%{deps, [ {wooper, "2.0.13"} ] }.
 
 
 % Include directories found in INC:
@@ -54,8 +54,18 @@
 %{pre_hooks,  [ {compile, "make -s rebar3-compile-pre-hook"} ]}.
 %{post_hooks, [ {compile, "make -s rebar3-compile-post-hook"} ]}.
 
-{pre_hooks,  [ {compile, "make -s rebar3-bulletproof-compile-pre-hook REBAR_HOOK_EXTRA_OPTS='--hiding-for-rebar --verbose'"} ]}.
-{post_hooks, [ {compile, "make -s rebar3-bulletproof-compile-post-hook REBAR_HOOK_EXTRA_OPTS='--hiding-for-rebar --verbose'"} ]}.
+
+%{pre_hooks,  [ {compile, "make -s rebar3-bulletproof-compile-pre-hook REBAR_HOOK_EXTRA_OPTS='--hiding-for-rebar --verbose'"} ]}.
+
+% Verbosity disabled:
+{pre_hooks,  [ {compile, "make -s rebar3-bulletproof-compile-pre-hook REBAR_HOOK_EXTRA_OPTS='--hiding-for-rebar'"} ]}.
+
+
+%{post_hooks, [ {compile, "make -s rebar3-bulletproof-compile-post-hook REBAR_HOOK_EXTRA_OPTS='--hiding-for-rebar --verbose'"} ]}.
+
+% Verbosity disabled:
+{post_hooks, [ {compile, "make -s rebar3-bulletproof-compile-post-hook REBAR_HOOK_EXTRA_OPTS='--hiding-for-rebar'"} ]}.
+
 
 
 % For release generation:
@@ -67,7 +77,7 @@
 %
 {relx, [
 
-  {release, {traces_release, "1.0.6"},
+  {release, {traces_release, "1.0.7"},
 			% myriad and wooper thus implied:
 			[sasl, traces]},
 
