--- a/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
+++ b/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
@@ -330,6 +330,16 @@ It allows all Erlang code, including the one of lower-level libraries, to rely u
 See `trace_bridging_test.erl <https://github.com/Olivier-Boudeville/Ceylan-Traces/blob/master/test/trace_bridging_test.erl>`_ for an example of use thereof.
 
 
+
+The ``Traceable`` Interface
+===========================
+
+This interface has been introduced so that other interfaces can depend on it rather than having their instances necessarily be a full-blown TraceEmitter.
+
+In practice this interface, defined in `class_Traceable.erl <https://github.com/Olivier-Boudeville/Ceylan-Traces/blob/master/src/class_Traceable.erl>`_ and `class_Traceable.hrl <https://github.com/Olivier-Boudeville/Ceylan-Traces/blob/master/include/class_Traceable.hrl>`_, offers the same basic macros for trace sending as ``class_TraceEmitter``, yet can be used by any WOOPER instance - be it a trace emitter or not, and, in this last case, whether or not having a trace bridge set; the relevant trace emission option is transparently used whenever having to emit an actual trace.
+
+
+
 --------------
 Trace Ordering
 --------------
