--- a/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
+++ b/doc/Ceylan-Traces-Layer-technical-manual-english.rst.template
@@ -25,7 +25,7 @@ Technical Manual of the ``Ceylan-Traces`` Layer
 
 
 :raw-html:`<center><img src="traces-title.png" id="responsive-image-small"></img>`
-:raw-latex:`\centering \includegraphics[scale=0.35]{traces-title.png}`
+:raw-latex:`\begin{center} \includegraphics[scale=0.35]{traces-title.png} \end{center}`
 
 
 
